--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <title>Directives</title>
 </head>
 <body>
+  
+  <div ui-view=""></div>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
   <script src="app/app.js"></script>
+  <script src="js/home/homeCtrl.js"></script>
+  <script src="js/home/homeDirective.js"></script>
 </body>
 </html>
